--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,32 +3,21 @@
 @tailwind utilities;
 
 body {
-  background: linear-gradient(rgba(195, 177, 177, 0.2), rgba(0, 0, 0, 0.2)), url("./assets/v960-ning-11.jpg");
+  background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url("./assets/v960-ning-11.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-.chat-list,
-.conversation-panel {
-  backdrop-filter: blur(5px);
+body::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar {
-  background: #414141;
-  backdrop-filter: blur(10px);
+body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
 
-}
-::-webkit-scrollbar-track{
- 
-  background: grey;
-  backdrop-filter: blur(10px);
-  
-}
-::-webkit-scrollbar-thumb{
-  background: #121212;
-  border-radius:5px;
-}
-::-webkit-scrollbar-thumb:hover{
-  background: #242424;
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
