--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url("./assets/v960-ning-11.jpg");
+    url("./assets/chat-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
